# reddit-stash-insights

./: .gitignore  LICENSE  README.md  ab_test_rag.py  noxfile.py  pyproject.toml
.github/workflows/: compatibility.yml
.streamlit/: config.toml
docs/: architecture.md  configuration.md  mcp.md  providers.md
docs/plans/: 2026-02-16-phase1-foundation-and-search.md
docs/research/: 00-architecture-overview.md  01-vector-search.md  02-knowledge-graph.md  03-llm-integration.md  04-mcp-server.md  05-analytics-features.md  06-tech-validation-log.md
scripts/: install-hooks.sh  pre-push-quality.sh
src/rsi/: __init__.py  cli.py  config.py  mcp_server.py
src/rsi/chat/: __init__.py  engine.py  history.py  prompt.py
src/rsi/chat/providers/: __init__.py  availability.py  base.py  llama_cpp_provider.py  ollama_provider.py  openai_provider.py
src/rsi/core/: __init__.py  file_log.py  models.py  parser.py  s3_fetch.py  scanner.py
src/rsi/indexer/: __init__.py  embedder.py  search.py  vector_store.py
src/rsi/ui/: __init__.py  chat.py
tests/: test_chat_engine.py  test_chat_providers.py  test_cli.py  test_cli_chat.py  test_cli_search.py  test_config.py  test_embedder.py  test_integration.py  test_models.py  test_parser.py  test_s3_fetch.py  test_scanner.py  test_search.py  test_vector_store.py
tests/fixtures/: rag_test_questions.json  sample_comment.md  sample_file_log.json  sample_post.md
