[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

[project]
name = "reddit-stash-insights"
version = "0.1.0"
description = "Semantic search, knowledge graph, analytics, and AI chat for reddit-stash archives"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pyyaml>=6.0.3",
    "typer>=0.23",
]

[project.optional-dependencies]
search = [
    "sentence-transformers>=5.0",
    "lancedb>=0.29.2",
    "FlagEmbedding>=1.3",
]
graph = [
    "networkx>=3.6",
    "bertopic>=0.17",
    "pyvis>=0.3.2",
    "sentence-transformers>=5.0",
]
analytics = [
    "plotly>=6.0",
    "pandas>=3.0",
]
chat = [
    "llama-cpp-python>=0.3.16",
]
chat-ollama = [
    "ollama>=0.6",
]
chat-openai = [
    "openai>=1.0",
]
mcp = [
    "mcp>=1.26",
]
ui = [
    "streamlit>=1.54",
    "plotly>=6.0",
]
all = [
    "reddit-stash-insights[search,graph,analytics,chat,chat-ollama,chat-openai,mcp,ui]",
]
dev = [
    "ruff>=0.15",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "types-requests>=2.31",
    "nox>=2026.2",
]

[project.scripts]
rsi = "rsi.cli:app"

[project.urls]
Repository = "https://github.com/rhnfzl/reddit-stash-insights"
Issues = "https://github.com/rhnfzl/reddit-stash-insights/issues"
Documentation = "https://github.com/rhnfzl/reddit-stash-insights#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/rsi"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true

# Modules with heavy third-party type issues (llama-cpp, openai SDK typestubs)
[[tool.mypy.overrides]]
module = [
    "rsi.chat.providers.llama_cpp_provider",
    "rsi.chat.providers.openai_provider",
]
ignore_errors = true
